# px4-drone-control

./: .gitignore  Readme.md  payload.json  project_report_drone_controller.md  sim2sim_transfer_report.md
controller/: package.xml  pyproject.toml  requirements.txt  requirements_no_versions.txt  setup.py
controller/controller/: drone_controller.py  integrated_motor_test.py  live_plotter.py  motor_test.py  offboard_heartbeat.py  position_input.py  rate_controller.py  sac_controller.py  se3_controller.py
controller/models/: final_vec_normalize_stats.pkl
docker/: Dockerfile.drone-controller  Dockerfile.gcs  Dockerfile.simulation  docker-compose.yml  requirements.txt
px4_ros_com/src/examples/offboard/: offboard_control.cpp
px4_ros_com/src/examples/offboard_py/: mycontrol.py  offboard_control.py
simulation/: entrypoint.sh  px4-rc.params  sim.yml
